# rpcsx-ui-android

./: .gitmodules  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: android-build.yml  android.yml  cmake-multi-platform.yml  msvc.yml
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/net/rpcsx/: GameRepository.kt  MainActivity.kt  RPCSX.kt  UserRepository.kt
app/src/main/java/net/rpcsx/overlay/: OverlayEditActivity.kt  PadOverlay.kt  PadOverlayButton.kt  PadOverlayDpad.kt
app/src/main/java/net/rpcsx/ui/drivers/: GpuDriversScreen.kt
app/src/main/java/net/rpcsx/ui/games/: GamesScreen.kt
app/src/main/java/net/rpcsx/ui/navigation/: AppNavHost.kt
app/src/main/java/net/rpcsx/ui/settings/: SettingsScreen.kt
app/src/main/java/net/rpcsx/utils/: GeneralSettings.kt  GitHub.kt  RpcsxUpdater.kt  UiUpdater.kt
app/src/main/res/drawable/: add_diamond.xml  gamepad.xml  memory.xml
